--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,5 @@
 <div>
-    <h1>Hola {{name}}, ¡Bienvenido!</h1>
-</div> <link rel="manifest" href="llll">
+    <h1>Nombre: {{name}}</h1>
+    <p>Lastname: {{lastName}}</p>
+    <p>Edad: {{age}}</p>
+</div> 
