--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,4 +3,14 @@ p{
 }
 .title{
     font-size: 50px;
+    text-align: center;
+}
+.anuncio{
+    font-size: 20px;
+    text-align: center;
+    margin-top: 60px;
+}
+.img{
+    width: 40%;
+    height: 80%;
 }
