--- a/views/users.handlebars
+++ b/views/users.handlebars
@@ -14,10 +14,17 @@
 <div>
     <main class="container ">
          <p class="title">PCPRO componentes y celulares  </p>
-         <h1 class="title">CHAT </h1>
-         <img src="/img/RTR2QKGR-1.jpg"  class="img" alt="">
-         <div id="caja"></div>
-        <form onsubmit="return addMensaje()">
+         <h1 class="title">DANICHAT </h1>
+         <img src="/img/RTR2QKGR-1.jpg"  class="img" alt="">         
+         <div id="messageLogs"></div>
+         <div>
+            <label for="texto" class="form-label">Mensaje</label>
+            <input type="text" class="form-control" rows="5"  placeholder="mensaje" id="chatBox">
+         </div>
+
+         
+        <div id="caja"></div>
+        {{!-- <form onsubmit="return addMensaje()">
             <div class="mb-3">
                 <label for="username" class="form-label">Nombre</label>
                 <input type="text" class="form-control" id="username" placeholder="Tu nombre...">
@@ -27,12 +34,12 @@
                 <textarea  id="texto" class="form-control" rows="5" placeholder="mensaje"></textarea>
             </div>
             <input type="submit" value="enviar" class="btn btn-primary"></input>
-        </form>
+        </form> --}}
     </main>
     <footer>
         <p class="anuncio">seguime en mis redes sociales</p>
     </footer>
     </div>
-
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/index.js"></script>
