--- a/views/users.handlebars
+++ b/views/users.handlebars
@@ -23,7 +23,7 @@
          </div>
 
          
-        <div id="caja"></div>
+        {{!-- <div id="caja"></div> --}}
         {{!-- <form onsubmit="return addMensaje()">
             <div class="mb-3">
                 <label for="username" class="form-label">Nombre</label>
